fixed break point

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="col-12 col-xl-8">
             <div id="map" class="map"></div>
           </div>
-          <div class="col-lg-4 col-12">
+          <div class="col-xl-4 col-12">
             <div class="card-bar">
               <section role="application">
                 <div class="card-form">
@@ -58,7 +58,7 @@
                 <section role="log" class="cards-list" aria-live="assertive"></section>
               </div>
             </div> <!-- card-bar -->
-          </div><!-- col-lg-4 col-12 -->
+          </div><!-- col-xl-4 col-12 -->
         </div><!-- .row -->
       </div> <!-- .container-fluid -->
       <div class="location-search">
@@ -82,7 +82,7 @@
     <section class="search-wrapper" role="application">
       <div class="container-fluid">
         <div class="row no-gutters">
-          <div class="col-lg-4 col-12">
+          <div class="col-xl-4 col-12">
             <div class="search-c">
               <section role="application">
                 <form class="js-search">
@@ -100,7 +100,7 @@
               </p>
               <section role="log" class="js-search-results" aria-live="assertive"></section>
             </div><!-- .search-c -->
-          </div><!-- .col-lg-4 -->
+          </div><!-- .col-xl-4 -->
         </div><!-- .row no-pad -->
       </div><!-- .container-fluid -->
     </section><!-- .search-wrapper -->
